# github_clone

./: .gitignore  LICENSE  README.md  USAGE.md  main.py  pyproject.toml
bench/: README.md  __init__.py  run.py
compat/: __init__.py  backends.py  compare.py  ops.py  runner.py
compat/scenarios/: S1_linear_commits.py  S2_branches.py  S3_tags.py  S4_reset.py  S5_restore.py  S6_status.py  S7_stash.py  S8_multi_branch.py  __init__.py
demo/: README.md  __init__.py  run.py
docs/: ARCHITECTURE.md  CHECKLIST.md  INDEX.md  RECON.md
pygit/: __init__.py  __main__.py  cli.py  clone.py  config.py  constants.py  errors.py  fetch.py  gc.py  graph.py  http_dumb.py  idx.py  ignore.py  index.py  objects.py  objectstore.py  odb.py  pack.py  pkt_line.py  plumbing.py  porcelain.py  push.py  rebase.py  reflog.py  refs.py  remote.py  repo.py  stash.py  transport.py  upload_pack.py  util.py
tests/: .gitignore  __init__.py  test_cherry_pick.py  test_clone.py  test_compat.py  test_config.py  test_fetch.py  test_gc.py  test_graph_tools.py  test_ignore.py  test_index.py  test_merge_3way.py  test_merge_ff.py  test_objects.py  test_pack_read.py  test_push.py  test_rebase.py  test_reflog.py  test_refs.py  test_refs_plumbing.py  test_remote.py  test_revparse.py  test_show_restore.py  test_signature.py  test_stash.py  test_tags.py  test_upload_pack.py
