[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygit"
version = "0.1.0"
description = "A minimal Git clone in Python (init, add, commit, branch, checkout, log, status, plumbing, pack, clone, fetch, push)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PyGit" }]
keywords = ["git", "vcs", "version-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]

[project.scripts]
pygit = "pygit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygit*", "compat*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
compat = ["scenarios/*.py"]
